# Nominatim

./: CMakeLists.txt
docs/: CMakeLists.txt
module/: CMakeLists.txt
nominatim/: CMakeLists.txt
scripts/gentoo/sci-geosciences/nominatim/: Manifest  metadata.xml  nominatim-9999.ebuild
settings/: defaults.php
sql/: indices.src.sql
utils/: setup.php  update.php
